--- a/public/css/style.css
+++ b/public/css/style.css
@@ -231,6 +231,16 @@ body {
     margin: 1.5rem auto;
 }
 
+@media (max-width: 600px) {
+  #hero h1{
+    font-size: 2rem ;
+  }
+  #hero p {
+    font-size: 1rem;
+   
+}
+}
+
 /* --- Sections --- */
 .section-padding {
     padding: 80px 0;
