--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,7 +1,10 @@
 <!-- Navigation Bar -->
+
+</style>
+
 <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top shadow-sm farm-navbar">
     <div class="container">
-      <a class="navbar-brand fw-bold text-success" href="/home">🚜 FarmLink</a>
+      <a class="navbar-brand fw-bold text-success" href="/home"> Farm-Link</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
