--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -58,7 +58,7 @@
                     </ul>
 
                     <!-- Owner Details Section -->
-                    <div class="card mt-5 shadow-sm border-0 owner-card">
+                    <div class="card mt-2 shadow-sm border-0 owner-card">
                       <div class="card-body d-flex justify-content-between align-items-center flex-wrap">
                         <div>
                           <h5 class="fw-bold text-success mb-1">
@@ -76,7 +76,7 @@
                           <p class="mb-0 text-muted"><b>Joined on :</b> <%= listing.owner.joinedAt.toLocaleDateString('en-GB', { day: 'numeric', month: 'short', year: 'numeric' }) %></p>
                         </div>
 
-                        <div class="mt-3 mt-md-0">
+                        <div class="mt-3 mt-md-0 " >
                           <!-- WhatsApp Message Button -->
                           <a 
                             href="https://wa.me/<%=listing.owner.phone%>" 
@@ -95,6 +95,7 @@
                           </a>
                         </div>
                         
+                        </div>
                     <!-- Owner Options -->
                     
                     <div class="owner-btn mt-4 d-flex">
@@ -121,7 +122,7 @@
       <hr>
 
       <!------------------------------------------- Review Section--------------------------------------- -->
-      <div class="container ">
+      <div class="container mb-5">
         <div class="card shadow-sm border-0 p-4 ">
           <h4 class="mb-4 text-success fw-bold">🌾 Reviews & Feedback</h4>
 
@@ -197,7 +198,7 @@
         <% if (listing.reviews && listing.reviews.length> 0) { %>
 
           <div class="list-group shadow-sm rounded">
-            <h6><b>All Reviews</b></h6>
+            <h5><b>All Reviews</b></h5>
             
             <% listing.reviews.forEach(review=> { %>
               <div class="list-group-item">
