--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -5,11 +5,26 @@
         <div class="row">
             <!-- About FarmLink -->
             <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
-                <h5 class="footer-title">🚜 FarmLink</h5>
+                <h5 class="footer-title"> FarmLink</h5>
                 <p class="text-white-50">Empowering farmers by creating a connected, resourceful, and efficient agricultural community. Share equipment, save costs, and grow together.</p>
                  <div class="social-icons mt-4">
-                    <a href="#" aria-label="Facebook"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16"><path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/></svg></a>
-                    <a href="#" aria-label="Twitter"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitter-x" viewBox="0 0 16 16"><path d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865l8.875 11.633Z"/></svg></a>
+                    <a href="https://wa.me/9353286959" 
+                                target="_blank" rel="noopener noreferrer" aria-label="WhatsApp">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="1.3em" height="1.1em" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
+                                <path d="M13.601 2.326A7.868 7.868 0 0 0 8.034.001C3.604.001 .007 3.594.006 8.021c0 1.414.367 2.794 1.063 4.009L0 16l4.063-1.061a7.963 7.963 0 0 0 3.971 1.022h.003c4.429 0 8.022-3.593 8.022-8.021a7.97 7.97 0 0 0-2.458-5.614ZM8.034 
+                                14.6h-.002a6.57 6.57 0 0 1-3.356-.921l-.24-.143-2.409.63.643-2.348-.157-.242a6.573 
+                                6.573 0 0 1-1.014-3.514c0-3.626 2.953-6.578 6.578-6.578a6.54 
+                                6.54 0 0 1 4.655 1.927 6.532 6.532 0 0 1 1.923 
+                                4.654c0 3.626-2.953 6.565-6.578 
+                                6.565ZM11.27 9.896c-.197-.099-1.17-.578-1.352-.643-.181-.065-.314-.099-.446.099-.133.197-.512.643-.627.776-.114.133-.232.148-.43.05-.197-.099-.834-.307-1.59-.981-.588-.523-.984-1.17-1.098-1.368-.114-.198-.012-.304.086-.403.089-.088.197-.232.296-.347.098-.115.131-.197.197-.33.065-.132.033-.248-.017-.347-.05-.099-.446-1.076-.611-1.473-.16-.384-.323-.33-.446-.336l-.382-.007c-.132 
+                                0-.347.05-.53.248s-.694.678-.694 
+                                1.653.712 1.92.812 2.05c.099.132 
+                                1.403 2.141 3.403 3.002.476.205.846.326 
+                                1.135.418.477.152.911.131 
+                                1.254.08.383-.057 1.17-.48 
+                                1.335-.942.165-.463.165-.86.116-.942-.05-.082-.182-.132-.38-.231Z"/>
+                                </svg>
+                            </a>
                     <a href="https://www.instagram.com/yashurealworld?igsh=MTh6c3FmejZyOG40eg==" aria-label="Instagram"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16"><path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372.527-.205.973-.478 1.417-.923.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.231 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/></svg></a>
                     <a href="https://www.linkedin.com/in/yashodhan-gurav" target="_blank" aria-label="LinkedIn">
                         <svg xmlns="www.linkedin.com/in/yashodhangurav" width="1em" height="1em" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
@@ -54,7 +69,7 @@
         
         <div class="row footer-bottom">
             <div class="col-12 text-center">
-                <p class="mb-0 text-white-50">&copy; 2025 FarmLink. All Rights Reserved. Built for the farming community by yashodhan Gurav.</p>
+                <p class="mb-0 text-white-50">&copy; 2025 FarmLink. All Rights Reserved. Built for the farming community by yashodhan.</p>
             </div>
         </div>
     </div>
