--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -25,6 +25,7 @@
     <div class="body-container">
         <%- include("../includes/flash.ejs") %>
         <%- body %>
+        <%- include("../includes/chatbotBtn.ejs")%>
     </div>
 <!-- ------------------------------------------------------------------------------------------------------------------ -->
   <%- include("../includes/footer.ejs")%>
